# MiniPGW

./: CMakeLists.txt  README.md  cfg_cli.json  cfg_srv.json  config_client.json  config_server.json  script_hardtest
src/client/: CMakeLists.txt  client.cpp
src/common/: CMakeLists.txt  config.cpp  config.h  utils.cpp  utils.h
src/server/: CMakeLists.txt  server.cpp
tests/: CMakeLists.txt  test_client_integration.cpp  test_config.cpp  test_server_integration.cpp  test_utils.cpp
